# researchGroups

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yaml
backend/: settings.py  test_settings.py  urls.py
backend/announcements/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/announcements/migrations/: 0001_initial.py  0002_announcement_ann_type.py  0003_alter_announcement_ann_type.py  0004_announcement_edited.py  0005_remove_announcement_date_announcement_added_and_more.py  0006_alter_announcement_added_alter_announcement_edited.py  0007_alter_announcement_edited.py  0008_alter_announcement_edited.py
backend/common/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/projects/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/projects/migrations/: 0001_initial.py  0002_projectpost_projectpostcomment_projectlink_and_more.py  0003_rename_test_projectpostcomment_text.py  0004_project_members.py  0004_project_members_alter_projectuser_role.py  0005_merge_20221128_2007.py  0006_alter_project_deadline_alter_project_funds_and_more.py  0007_project_project_owner.py  0008_alter_project_funds.py  0009_project_contact.py  0009_projectdisk_users_projectlink_users.py  0010_alter_project_category.py  0010_alter_projectdisk_name_alter_projectlink_name.py  0011_merge_20221213_2213.py  0012_alter_guideproject_guide.py  0013_alter_projectpost_added_alter_projectpost_edited_and_more.py  0014_alter_projectpost_title.py
backend/research_groups/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/research_groups/migrations/: 0001_initial.py  0002_researchgrouppost_researchgrouppostcomment_and_more.py  0003_remove_researchgroup_description.py  0004_rename_test_researchgrouppostcomment_text.py  0005_alter_researchgroup_name_and_more.py  0005_researchgroup_group_owner_and_more.py  0006_alter_researchgroup_about_us_and_more.py  0007_alter_researchgroup_name.py  0008_merge_20221128_2007.py  0009_alter_researchgroup_category.py  0009_rename_project_researchgroupdisk_research_group_and_more.py  0010_merge_20221210_1911.py  0010_rename_project_researchgroupdisk_research_group_and_more.py  0011_researchgroupdisk_users.py  0012_alter_researchgroupdisk_users.py  0013_researchgrouplink_users.py  0014_alter_researchgroupdisk_name_and_more.py  0015_alter_researchgroupguide_guide.py  0016_merge_20221217_1208.py  0017_alter_researchgrouppost_added_and_more.py  0018_alter_researchgrouppost_title.py
backend/tutorials/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/tutorials/migrations/: 0001_initial.py  0002_tutorial_is_public.py  0003_alter_tutorial_type.py  0004_rename_type_tutorial_category.py  0005_alter_tutorial_created.py
backend/users/: serializers.py  urls.py  views.py
backend/utilsx/: serializers.py
backend/utilsx/mail/: EmailBuilder.py
frontend/: Dockerfile  package-lock.json  package.json  vue.config.js
frontend/src/: App.vue  App2.vue  main.js  router.js
frontend/src/services/: announcementService.js  api.js  authService.js  groupForumPostService.js  projectDiskService.js  projectLinkService.js  projectMemberService.js  projectPostService.js  (+9 more)
frontend/styles/: colors.css
scripts/: data-generator.py
(+76 files in other folders)
