[tool.poetry]
name = "researchgroups"
version = "0.1.0"
description = ""
authors = ["Krzysztof Bogaczyk <bogaczyk.krzysztof00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
psycopg2-binary = "^2.9.5"
djangorestframework = "^3.14.0"
markdown = "^3.4.1"
django-filter = "^22.1"
django-cors-headers = "^3.13.0"
python-dotenv = "^0.21.0"
django-email-log = "^1.2.0"
djangorestframework-simplejwt = "^5.2.2"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[tool.poetry.group.test.dependencies]
pytest-django = "^4.5.2"
pytest-order = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
