[tool.poetry]
name = "researchgroups"
version = "0.1.0"
description = ""
authors = ["Krzysztof Bogaczyk <bogaczyk.krzysztof00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
psycopg2-binary = "^2.9.5"
djangorestframework = "^3.14.0"
markdown = "^3.4.1"
django-filter = "^22.1"
django-cors-headers = "^3.13.0"
python-dotenv = "^0.21.0"
django-email-log = "^1.2.0"
djangorestframework-simplejwt = "^5.2.2"
Faker = "^15.3.2"
pandas = "^1.5.1"
SQLAlchemy = "^1.4.44"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
